--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 backcall==0.2.0
 decorator==4.4.2
 Django==2.2.16
+django-debug-toolbar==2.2
 django-extensions==3.0.8
 Faker==4.1.2
 flake8==3.8.3
 flake8-builtins==1.5.3
-flake8-import-order==0.18.1
 flake8-print==3.1.4
 ipython==7.18.1
 ipython-genutils==0.2.0
